--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
             <div class="alert alert-success">
               <p class="text-center">
                 Basic App to demonstrate the process of automatically deploying
-                containers on Kubernetes
+                containers on Kubernetes using GitHub Actions.
               </p>
             </div>
             <div class="text-center">
-              <img src="circleci-logo.png" alt="circleci-logo" />
+              <img
+                alt="nodejs"
+                src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png"
+              />
             </div>
 
             <div class="text-center">
